tests/mm0_mmu/fail/bad-sort3412.mm0
-- bad modifier order
provable free pure strict sort s3412;